# kv-store

./: .dockerignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
kv-store/: Chart.yaml  values.yaml
kv-store/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
kv-store/templates/tests/: test-connection.yaml
src/: cli.rs  errors.rs  main.rs  server.rs
