[package]
name = "k8s-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.3"
redis = { version = "0.21.0", features = ["tokio-comp"] }
thiserror = "1.0"
tokio = { version = "1.10", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2", features = ["add-extension", "auth", "compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter", "json"] }