[package]
name = "kv-store"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true
debug = true

[dependencies]
axum = "0.4.3"
clap = { version = "3.0.0-rc.7", features = ["derive", "env"] }
redis = { version = "0.21.0", features = ["tokio-comp"] }
thiserror = "1.0"
tokio = { version = "1.10", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2", features = ["add-extension", "auth", "compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"